# sand-sim

./: .gitignore  CMakeLists.txt  README.md
src/: config.h  main.c  physics.c  physics.h  sand_shader.c  sand_shader.h  sand_sim.c  sand_sim.h
